simple working chat
Now, the chat application is taking username and storing in local storage. Then while typing and submitting the message the username is fetched from local storage. then form is summitted with username and message. The same is logged in console.

--- a/views/sendChat.html
+++ b/views/sendChat.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <div>
-        <form action="/send">
+        <form onsubmit="document.getElementById('username').value = localStorage.getItem('username')" 
+        action="/send" method="post">
             <label for="message">Type your message</label>
+            <input id="username" type="hidden" name="username">
             <input type="text" name="message" id="msg">
             <button type="submit">Send</button>
         </form>
