--- a/views/login.html
+++ b/views/login.html
@@ -12,10 +12,10 @@
     </div>
 <hr>
     <div>
-        <form action="login" method="POST">
-            <label for="username">Enter Your username</label>
-            <input type="text" name="username" id="username">
-            <button type="submit">Login</button>
+        <form onsubmit="localStorage.setItem(`username`, document.getElementById(`username`).value)" 
+            action="/login" method="POST">
+            <input id="username" type="text" name"title">
+            <button type="submit">add</button>
         </form>
     </div>
 </body>
